--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
-	<title>SNTA 2024</title>
+	<title>WATCH 2025</title>
 <style>
 <!--
  /* Font Definitions */
@@ -100,13 +100,13 @@ ul
   #EFEFEF;padding:6.0pt 6.0pt 6.0pt 6.0pt'>
   <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
   font-family:"Verdana",sans-serif;color:black'>
-The Seventh International Workshop on<br>
-Systems and Network Telemetry and Analytics (SNTA 2024)
+First International Workshop on<br>
+Analytics, Telemetry, and Cybersecurity for HPCC (WATCH 2025)
 </span></p>
   <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
-  font-family:"Verdana",sans-serif;color:#888888'>Pisa, Italy
-  (June 3 - 4, 2024)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
-  font-family:"Verdana",sans-serif;color:#888888'>(in conjunction with <a href="http://www.hpdc.org/2024/" target="_blank">ACM HPDC 2024</a></span></p>
+  font-family:"Verdana",sans-serif;color:#888888'>Taipei, Taiwan
+  October 17, 2025)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
+  font-family:"Verdana",sans-serif;color:#888888'>(in conjunction with <a href="https://www.sigsac.org/ccs/CCS2025" target="_blank">ACM CCS 2025</a></span></p>
 
   </td>
  </tr>
@@ -142,7 +142,7 @@ none'>&nbsp;</span></p>
   #F9F9F9;padding:3.0pt 6.0pt 3.0pt 16.0pt'>
   <p class=MsoNormal style='margin-bottom:6.0pt'><span style='font-size:10.0pt;
   font-family:"Verdana",sans-serif;color:black'>
-  <span style='color:#1D419F'><a href="https://snta24.hotcrp.com/paper/new " target="_blank">https://snta24.hotcrp.com/paper/new </a></span></span></p>
+  <span style='color:#1D419F'><a href="https://watch25.hotcrp.com/paper/new " target="_blank">https://watch25.hotcrp.com/paper/new </a></span></span></p>
 <!--
   <p class=MsoNormal style='margin-bottom:6.0pt'><span style='font-size:10.0pt;
   font-family:"Verdana",sans-serif;color:black'>
@@ -159,7 +159,7 @@ none'>&nbsp;</span></p>
   <td width=375 style='width:281.25pt;border:solid #B6B6B6 1.0pt;background:
   #EFEFEF;padding:3.0pt 6.0pt 3.0pt 16.0pt'>
   <p class=MsoNormal style='margin-bottom:6.0pt'><span style='font-size:10.0pt;
-	  font-family:"Verdana",sans-serif;color:black'><s>March 1</s><b>March 31</b>, 2024</span></p>
+	  font-family:"Verdana",sans-serif;color:black'><b>TBD</b>, 2025</span></p>
   </td>
  </tr>
 </table>
@@ -168,37 +168,36 @@ none'>&nbsp;</span></p>
 font-family:"Verdana",sans-serif;color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-bottom:9.0pt'><span style='font-size:11.0pt;
-font-family:"Verdana",sans-serif;color:black'>The tasks of systems and network
-telemetry are vital for effective operations and management of HPC and
-distributed computing systems by offering comprehensive measurement and
-analysis capabilities to provide  visibility into what is occurring at any
-time. The tasks will be significantly complicated with the greater complexity
-of computing systems, increasing network speed, and the newly introduced mobile
-and IoT devices. Such changes will render the existing telemetry and analysis
-techniques outdated, and more scalable techniques may be in place for
-data-driven and deeper data analysis. In addition to the quantitative and
-qualitative challenges, data pressure in systems and networks also comes from
-various sources such as sensors, computing systems, networking and security devices, 
-and other emerging computing elements speaking with different syntax and semantics,
-which makes organizing and incorporating the generated data
-difficult for extensive analysis.</span></p>
+font-family:"Verdana",sans-serif;color:black'>The productivity and trustworthiness 
+of computing systems are increasingly hindered by a multitude of challenges, including 
+system misconfigurations, insufficient engineering practices, and the escalating 
+complexity and scale of modern computing systems and applications. More critically, 
+malicious adversarial events, such as cyberattacks, data breaches, and other forms of 
+cyber threats, significantly undermine the reliability, robustness, integrity, and 
+security of systems and applications. Ensuring the systems' and applications' correct 
+operational states through effective monitoring, measurement, analysis, and diagnosis 
+is crucial to maintaining optimal performance, reliability, resilience, and security in 
+computing tasks. This includes detecting and responding to potential security threats, 
+identifying and mitigating performance bottlenecks, and ensuring the overall integrity 
+and trustworthiness of computing systems and applications.</span></p>
 
 <p class=MsoNormal style='margin-bottom:9.0pt'><span style='font-size:11.0pt;
-font-family:"Verdana",sans-serif;color:black'>This workshop aims at bridging
-the systems and network measurement and the latest advances in artificial intelligence
-and data science technologies to advance the performance and reliability of
-HPC and distributed systems. New analysis techniques are needed in the modern
-world from the diverse angles of systems/network performance, availability,
-and security. For example, real-time streaming analytics algorithms and methods
-need to be explored for estimating network performance and summarizing the
-traffic variables to capture the network activities due to the network
-bandwidth increase. Multivariate analysis of telemetric variables may
-provide an intuitive, comprehensive view of the systems and network
-dynamics. New logging techniques are also needed with the latest
-developments in storage and archival technologies. In addition, many
-applications in this area may need to address the application-specific
-requirements and challenges. 
-This workshop intends to share visions of investigating new approaches and methods at the intersection of data sciences and HPC/distributed computing systems.  
+font-family:"Verdana",sans-serif;color:black'>This workshop aims to provide a dedicated 
+platform for researchers, practitioners, and industry experts to discuss cutting-edge 
+topics on analytics, telemetry, and cybersecurity for high performance computing and 
+communications (HPCC). We encourage submissions that explore novel methodologies, tools, 
+and practices for monitoring and analyzing the status of computing systems and applications, 
+including the detection and response to potential security threats, performance bottlenecks, 
+and other operational issues. We also invite contributions that enhance observability and 
+visibility, strengthen resilience and security, and improve the overall trustworthiness of 
+heterogeneous computing and communication environments. Additionally, we seek contributions 
+that address the challenges and opportunities presented by emerging technologies and trends, 
+such as artificial intelligence (AI), machine learning (ML), Internet of Things (IoT), cloud 
+computing, and edge computing, from the perspective of security principles and objectives. 
+This includes exploring the potential risks and benefits of these technologies, identifying 
+novel attack vectors and vulnerabilities, and developing innovative solutions to mitigate 
+these threats and ensure the security, resilience, and integrity of emerging computing systems 
+and applications.
 </span><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
 color:black;background:white'>&nbsp;&nbsp;</span></p>
 
@@ -272,7 +271,7 @@ href="https://easychair.org/conferences/?conf=snta2020">https://easychair.org/co
 -->
 <p class=MsoNormal style='margin-bottom:9.0pt'><span style='font-size:11.0pt;
 font-family:"Verdana",sans-serif;color:black'>Submission link:&nbsp;
-<a href="https://snta24.hotcrp.com/paper/new " target="_blank">https://snta24.hotcrp.com/paper/new</a>&nbsp;</span></p>
+<a href="https://watch25.hotcrp.com/paper/new " target="_blank">https://watch25.hotcrp.com/paper/new</a>&nbsp;</span></p>
 
 
 <div style='border:none;border-bottom:solid black 1.5pt;padding:0in 0in 6.0pt 0in;
@@ -288,13 +287,13 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Important Dates</span></b
 
 <ul type=disc>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-	 font-family:"Verdana",sans-serif'>Submission deadline: <s>March 1</s>March 31, 2024</span></li>
+	 font-family:"Verdana",sans-serif'>Submission deadline: TBD, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-	 font-family:"Verdana",sans-serif'>Author notification: April 12, 2024</span></li>
+	 font-family:"Verdana",sans-serif'>Author notification: TBD, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Camera-ready deadline: April 18, 2024</span></li>
+     font-family:"Verdana",sans-serif'>Camera-ready deadline: TBD, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Workshop: June 3-4, 2024</span></li>
+     font-family:"Verdana",sans-serif'>Workshop: October 17, 2025</span></li>
 </ul>
 
 <div style='border:none;border-bottom:solid black 1.5pt;padding:0in 0in 6.0pt 0in;
@@ -470,7 +469,7 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Venue</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:9.0pt'><span style='font-size:11.0pt;
 font-family:"Verdana",sans-serif;color:black'>The conference will be held
-in&nbsp;conjunction with ACM <a href="http://www.hpdc.org/2024/" target="_blank">HPDC 2024</a>.
+in&nbsp;conjunction with ACM <a href="https://www.sigsac.org/ccs/CCS2025/" target="_blank">CCS 2025</a>.
 
 
 <!--
@@ -489,10 +488,8 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Contact</span></b></p>
 
 <p class=MsoNormal style='margin-bottom:9.0pt'><span style='font-size:11.0pt;
 font-family:"Verdana",sans-serif;color:black'>All questions about submissions
-should be emailed to SNTA.help@gmail.com.</span></p>
+should be emailed to WATCH.miniconf@gmail.com.</span></p>
 
-<p class=MsoNormal><a href="/snta/SNTA-archive.html">Previous SNTA workshops</a></p>
-<br>
 
 <p class=MsoNormal style='margin-bottom:9.0pt'><span style='font-size:11.0pt;
 font-family:"Verdana",sans-serif;color:black'>&nbsp;</span></p>
