dates and topics

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Analytics, Telemetry, and Cybersecurity for HPCC (WATCH 2025)
 </span></p>
   <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
   font-family:"Verdana",sans-serif;color:#888888'>Taipei, Taiwan
-  October 17, 2025)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
+  October 13-17, 2025)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
   font-family:"Verdana",sans-serif;color:#888888'>(in conjunction with <a href="https://www.sigsac.org/ccs/CCS2025" target="_blank">ACM CCS 2025</a></span></p>
 
   </td>
@@ -159,7 +159,7 @@ none'>&nbsp;</span></p>
   <td width=375 style='width:281.25pt;border:solid #B6B6B6 1.0pt;background:
   #EFEFEF;padding:3.0pt 6.0pt 3.0pt 16.0pt'>
   <p class=MsoNormal style='margin-bottom:6.0pt'><span style='font-size:10.0pt;
-	  font-family:"Verdana",sans-serif;color:black'><b>TBD</b>, 2025</span></p>
+	  font-family:"Verdana",sans-serif;color:black'><b>June 20</b>, 2025</span></p>
   </td>
  </tr>
 </table>
@@ -212,31 +212,27 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Topics of Interest (but n
 
 <ul type=disc>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Systems and network measurement, analysis, and summarization</span></li>
+     font-family:"Verdana",sans-serif'>Real-time monitoring and operations</span></li>
 <!--  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>HPC, superfacility, and distributed systems</span></li> -->
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Data-driven, multivariate, streaming-based data processing</span></li>
+     font-family:"Verdana",sans-serif'>Performance analysis and diagnostics</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Scalable distributed and federated machine learning</span></li>
+     font-family:"Verdana",sans-serif'>Security and performance metrics</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Performance modeling, analysis, and optimization</span></li>
+     font-family:"Verdana",sans-serif'>AI/ML-driven methodologies</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Cybersecurity, forensics, privacy, and anonymization</span></li>
+     font-family:"Verdana",sans-serif'>IoT and cloud computing security</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Intelligent workflow, visualization, and applications</span></li> 
+     font-family:"Verdana",sans-serif'>Security information and event management (SIEM)</span></li> 
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Smart instruments, edge/fog-systems, and IoTs</span></li>
+     font-family:"Verdana",sans-serif'>Malware analysis and detection</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Wireless, sensor, 5G/6G networks measurement and analysis</span></li>
+     font-family:"Verdana",sans-serif'>Digital forensics and incident response</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Software/Knowledge-Defined-* technologies</span></li>
+     font-family:"Verdana",sans-serif'>Security and privacy in emerging technologies</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Advances in network and storage technologies </span></li>
- <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Design and evaluation of HPC and distributed systems</span></li>
- <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Best practices and implementations tied to systems/network data analysis</span></li>
+     font-family:"Verdana",sans-serif'>Best practices for resilient computing</span></li>
 </ul>
 
 <div style='border:none;border-bottom:solid black 1.5pt;padding:0in 0in 6.0pt 0in;
@@ -287,13 +283,13 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Important Dates</span></b
 
 <ul type=disc>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-	 font-family:"Verdana",sans-serif'>Submission deadline: TBD, 2025</span></li>
+	 font-family:"Verdana",sans-serif'>Submission deadline: June 20, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-	 font-family:"Verdana",sans-serif'>Author notification: TBD, 2025</span></li>
+	 font-family:"Verdana",sans-serif'>Author notification: August 8, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Camera-ready deadline: TBD, 2025</span></li>
+     font-family:"Verdana",sans-serif'>Camera-ready deadline: August 22, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Workshop: October 17, 2025</span></li>
+     font-family:"Verdana",sans-serif'>Workshop: October 13-17, 2025</span></li>
 </ul>
 
 <div style='border:none;border-bottom:solid black 1.5pt;padding:0in 0in 6.0pt 0in;
