--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Analytics, Telemetry, and Cybersecurity for HPCC (WATCH 2025)
 </span></p>
   <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
   font-family:"Verdana",sans-serif;color:#888888'>Taipei, Taiwan
-  October 13-17, 2025)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
+  October 17, 2025)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
   font-family:"Verdana",sans-serif;color:#888888'>(in conjunction with <a href="https://www.sigsac.org/ccs/CCS2025" target="_blank">ACM CCS 2025</a></span></p>
 
   </td>
@@ -216,23 +216,25 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Topics of Interest (but n
 <!--  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>HPC, superfacility, and distributed systems</span></li> -->
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Performance analysis and diagnostics</span></li>
+     font-family:"Verdana",sans-serif'>Real-time monitoring and operations: Approaches for scalable monitoring and operations for high performance computing and communications.</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Security and performance metrics</span></li>
+     font-family:"Verdana",sans-serif'>Performance analysis and diagnostics: Techniques for analyzing and diagnosing performance issues in systems, networking, and applications.</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>AI/ML-driven methodologies</span></li>
+     font-family:"Verdana",sans-serif'>Security and performance metrics: Integration of security indicators with performance metrics to ensure secure and efficient computing.</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>IoT and cloud computing security</span></li>
+     font-family:"Verdana",sans-serif'>AI/ML-driven methodologies: Applications of artificial intelligence and machine learning for measurement, analysis, detection, and response in computing systems.</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Security information and event management (SIEM)</span></li> 
+     font-family:"Verdana",sans-serif'>IoT and cloud computing security: Security challenges and solutions for Internet of Things (IoT) devices, cloud computing environments, and other emerging technologies.</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Malware analysis and detection</span></li>
+     font-family:"Verdana",sans-serif'>Security information and event management (SIEM): Methods and tools for collecting, analyzing, and responding to security-related data from various sources.</span></li> 
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Digital forensics and incident response</span></li>
+     font-family:"Verdana",sans-serif'>Malware analysis and detection: Techniques for analyzing and detecting malware, including zero-day attacks and advanced persistent threats.</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Security and privacy in emerging technologies</span></li>
+     font-family:"Verdana",sans-serif'>Digital forensics and incident response: Methods and tools for conducting digital forensics investigations and responding to security incidents.</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Best practices for resilient computing</span></li>
+     font-family:"Verdana",sans-serif'>Security and privacy in emerging technologies: Security and privacy challenges and solutions for emerging technologies, including blockchain, artificial intelligence, and machine learning.</span></li>
+ <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
+     font-family:"Verdana",sans-serif'>Best practices for resilient computing: Guidelines and strategies for improving performance and resilience in high performance computing and communication environments.</span></li>
 </ul>
 
 <div style='border:none;border-bottom:solid black 1.5pt;padding:0in 0in 6.0pt 0in;
@@ -289,7 +291,7 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Important Dates</span></b
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Camera-ready deadline: August 22, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Workshop: October 13-17, 2025</span></li>
+     font-family:"Verdana",sans-serif'>Workshop: October 17, 2025</span></li>
 </ul>
 
 <div style='border:none;border-bottom:solid black 1.5pt;padding:0in 0in 6.0pt 0in;
@@ -334,15 +336,15 @@ Committee</span></b></p>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Engin Arslan, University of Nevada at Reno, USA</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Sang-Yoon Chang, University of Colorado at Colorado Springs, USA</span></li>
+     font-family:"Verdana",sans-serif'>Rosa Badia, Barcelona Supercomputing Center, Spain</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Ming-Hung Chen, IBM, USA</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Chunglae Cho, ETRI, Korea</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Italo Epicoco, University of Salento, Italy</span></li>
+     font-family:"Verdana",sans-serif'>Jong Choi, Oak Ridge National Laboratory, USA</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Wenjun Fan, Xi'an Jiaotong-Liverpool University, China</span></li>
+     font-family:"Verdana",sans-serif'>Italo Epicoco, University of Salento, Italy</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>In Kee Kim, University of Georgia, USA</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
@@ -350,23 +352,23 @@ Committee</span></b></p>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Chul-Ho Lee, Texas State University, USA</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Dongeun Lee, Texas A&M University-Commerce, USA</span></li>
-<li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Che-Rung Lee, National Tsing Hua University, Taiwan</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Kwangsung Oh, University of Nebraska Omaha, USA</span></li>
+     font-family:"Verdana",sans-serif'>Dongeun Lee, Texas A&M University-Commerce, USA</span></li>
+<li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
+     font-family:"Verdana",sans-serif'>Wonjun Lee, Biola University, USA</span></li>
+<li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
+     font-family:"Verdana",sans-serif'>Laurent Lefèvre, INRIA and Université de Lyon, France</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Amir H. Payberah, KTH Royal Institute of Technology, Sweden</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Marco Pulimeno, University of Salento, Italy</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Thomas Ropars, Univ. Grenoble Alpes, France</span></li>
-<li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Alex Sim, Lawrence Berkeley National Laboratory, USA</span></li>
 <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Houjun Tang, Lawrence Berkeley National Laboratory, USA</span></li>
-<li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>K. John Wu, Lawrence Berkeley National Laboratory, USA</span></li>
+<li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
+     font-family:"Verdana",sans-serif'>Shinjae Yoo, Brookhaven National Laboratory, USA</span></li>
 
 </ul>
 
@@ -388,8 +390,8 @@ style='font-size:11.0pt;font-family:"Verdana",sans-serif;color:#333333'>Organizi
      font-family:"Verdana",sans-serif'>Jerry Chou, National Tsing Hua University, Taiwan
      </span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Jinoh Kim, Texas A&amp;M
-     University-Commerce, USA</span></li>
+     font-family:"Verdana",sans-serif'>Jinoh Kim, East Texas A&amp;M
+     University, USA</span></li>
 <!--  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>Alex Sim, Lawrence Berkeley National Laboratory, USA
      </span></li> -->
