--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Analytics, Telemetry, and Cybersecurity for HPCC (WATCH 2025)
 </span></p>
   <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
   font-family:"Verdana",sans-serif;color:#888888'>Taipei, Taiwan
-  October 17, 2025)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
+  (October 17, 2025)</span></p>  <p class=MsoNormal style='margin-bottom:10.0pt'><span style='font-size:14.0pt;
   font-family:"Verdana",sans-serif;color:#888888'>(in conjunction with <a href="https://www.sigsac.org/ccs/CCS2025" target="_blank">ACM CCS 2025</a></span></p>
 
   </td>
@@ -211,8 +211,6 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Topics of Interest (but n
 </div>
 
 <ul type=disc>
- <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-     font-family:"Verdana",sans-serif'>Real-time monitoring and operations</span></li>
 <!--  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
      font-family:"Verdana",sans-serif'>HPC, superfacility, and distributed systems</span></li> -->
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
