--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ style='font-family:"Verdana",sans-serif;color:#333333'>Important Dates</span></b
 
 <ul type=disc>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
-	 font-family:"Verdana",sans-serif'>Submission deadline: <s>June 20</s> July 25, 2025</span></li>
+	 font-family:"Verdana",sans-serif'>Submission deadline: <s>June 20</s> July 25, 2025 AOE (Anytime ON Earth)</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
 	 font-family:"Verdana",sans-serif'>Author notification: August 8, 2025</span></li>
  <li class=MsoNormal style='color:black'><span style='font-size:11.0pt;
