updated submission guidelines

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@ font-family:"Verdana",sans-serif;color:black'>All papers must be original and
 not simultaneously submitted to another journal or conference. Authors are
 invited to submit either a full (max 8 pages) paper or a short/work-in-progress
 (max 5 pages) paper. Papers will be peer-reviewed, and accepted papers will be published in the workshop proceedings as part of the ACM digital library.
+Besides the page limit, we adhere to the conference submission policy—including paper format and blinded review - as outlined at: <a href="https://www.sigsac.org/ccs/CCS2025/call-for-papers/">https://www.sigsac.org/ccs/CCS2025/call-for-papers/</a>
 	
 <!-- 	<br>
 Formatting: Authors are invited to submit papers with
