Keynote speaker info

--- a/index.html
+++ b/index.html
@@ -401,7 +401,18 @@ background:white'>
 
 <p class=MsoNormal style='margin-top:7.0pt;margin-right:0in;margin-bottom:6.0pt;
 margin-left:0in;background:white;border:none;padding:0in'><b><span
-style='font-family:"Verdana",sans-serif;color:#333333'>Keynote Speaker (TBD)</span></b></p>
+style='font-family:"Verdana",sans-serif;color:#333333'>Keynote Speaker: Dr. Hsu-Chun Hsiao</span></b></p>
+
+<img src="speaker.jpeg" alt="Dr. Hsu-Chun Hsiao" width="200" height="200">
+	
+<p>Bio: Dr. Hsu-Chun Hsiao is an Associate Professor in Computer Science and Information 
+	Engineering and the Graduate Institute of Networking and Multimedia at National 
+	Taiwan University. She completed her B.S. and M.S. at National Taiwan University 
+	in 2006 and 2008, respectively, and her Ph.D. at Carnegie Mellon University in 2014. 
+	Her research focuses on building practical security solutions with theoretical underpinnings. 
+	She is a recipient of several awards, including Young Scholar Fellowship and 
+	Ta-You Wu Memorial Award from Taiwan Ministry of Science and Technology, IEEE S&P 
+	Test-of-Time Award, and PETS Best Artifact Award.</p>
 
 </div>
 
