Update index2.html with final schedule

--- a/index2.html
+++ b/index2.html
@@ -11,9 +11,9 @@ style='font-size:14.0pt;color:black'>ACM First International Workshop on
 Analytics, Telemetry, and Cybersecurity for HPCC (WATCH 2025)</span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'>
-<a href="https://sntaworkshop.github.io/2023/index-CFP.html">CFP: https://https://watch-miniconf.github.io/index-CFP.html</a><br>
+<a href="https://https://watch-miniconf.github.io/index-CFP.html">CFP: https://https://watch-miniconf.github.io/index-CFP.html</a><br>
 <!-- <a href="https://sntaworkshop.github.io/snta/SNTA-archive.html">SNTA archive</a><br> -->
-Email: SNTA.help@gmail.com &nbsp;<br>
+Email: WATCH.miniconf@gmail.com &nbsp;<br>
 
 <p class=MsoNormal align=center style='text-align:center'><span
 style='color:black'>In conjunction with <a href="https://www.sigsac.org/ccs/CCS2025">ACM CCS 2025</a>,
@@ -83,11 +83,11 @@ This channel will remain open, and you can join the SNTA slack channel through t
 <tr>
   <td width=133 valign=top>
   <p class=MsoNormal><b>Welcome</b><br>
-	  Jerry Chou
-<br>9:30am - 9:45am 
+<br>9:20am - 9:30am 
   </p>
   </td>
   <td valign=top>
+	  Jerry Chou
   </td>
  </tr>
 	
@@ -95,35 +95,31 @@ This channel will remain open, and you can join the SNTA slack channel through t
   <td width=80  valign=top>
   <p class=MsoNormal><b>Keynote Speech</b><br>
 <!--      Chair: John Wu -->
-<br>9:45am - 10:30am
+<br>9:30am - 10:30am
   </p>
   </td>
   <td valign=top>
   <p class=MsoNormal>Keynote Presentation<br>
-&nbsp;&nbsp;&nbsp;&nbsp;Dr. Marco Aldinucci, University of Torino<br>
-&nbsp;&nbsp;&nbsp;&nbsp;Title: Decentralized machine learning and the compute continuum<br>
+&nbsp;&nbsp;&nbsp;&nbsp;Dr. Hsu-Chun Hsiao, National Tsing Hua University <br>
+&nbsp;&nbsp;&nbsp;&nbsp;Title: Fortifying the Digital Backbone for a Resilient Future<br>
 	<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;Abstract: Decentralized machine learning (DML) enables collaborative machine learning without
-centralized input data. Federated learning (FL) and edge inference (EI) are examples of DML.
-Collaboration naturally happens at the edge of a distributed system with inherently distributed
-data. While tools for DML are starting to flourish, much needs to be done to get more flexible and
-portable tools to experiment with novel techniques, non-fully connected topologies, multiple data
-domains, and asynchronous collaboration schemes. We'll present recent advances in DML,
-aiming to improve usability in data centers and, at the edge, to widen the class of models
-extending FL to non-DDN paradigms, to improve the accuracy of models controlling normalization
-and frequency of communications, and to boost data privacy through generative adversarial
-networks.
+	&nbsp;&nbsp;&nbsp;&nbsp;Abstract: Cyber resilience is crucial in a world facing significant 
+	  threats to digital infrastructure, ranging from physical cable cuts to sophisticated cyber attacks. 
+	  This keynote will explore how to build this resilience from the network layer to the application 
+	  layer, highlighting the importance of real-time in-network monitoring and advanced end-to-end security 
+	  techniques. The first part of the talk will focus on network infrastructure resilience, which is 
+	  crucial for protecting network protocols and traffic flows from large-scale attacks. We will review 
+	  the vulnerabilities of current protocols, such as BGP routing, in the face of state-level attackers, 
+	  and present our research on advanced DDoS defenses, including methods for detecting anomalous flow 
+	  at line speed. Next, we will shift our focus to resilience at the application level, ensuring that 
+	  information exchange remains both authentic and private. We will present solutions that include 
+	  privacy-preserving group messaging protocols and automated vulnerability detection. Finally, we 
+	  will explore the role of AI in cyber resilience. The vast amount of data generated in high-performance 
+	  communication and computing environments demands rapid threat detection and analysis for resilience. 
+	  We will discuss how AI can be used to automate vulnerability discovery, enable robust website 
+	  fingerprinting, and process large quantities of audit logs and threat reports.
 	<br><br>
-Bio: Marco Aldinucci is a full professor and P.I. of the Parallel Computing research group at the
-University of Torino. He received the HPC Advisory Council University Award 2011, the NVidia
-Research Award 2013, the IBM Faculty Award 2015, and the Autodesk Award 2021. He has
-participated in over 20 EU-funded research projects on parallel, cloud, and high-performance
-computing, attracting over 10M€ of research funds to the University of Torino. He has been the
-Italian delegate on the EuroHPC JU Governing Board (2018-2021). He has led the design of the
-HPC4AI laboratory and is the founding director of the CINI HPC Key Technologies and Tools
-national laboratory, gathering researchers from 38 Italian Universities. He is co-leading FureHPC,
-the technological spoke of the Italian National Centre on HPC (ICSC). He co-designed over ten
-programming frameworks for parallel and distributed computing.
+Bio: 
 	&nbsp;&nbsp;&nbsp;&nbsp;
   </p>
   </td>
@@ -141,23 +137,23 @@ programming frameworks for parallel and distributed computing.
 		
  <tr>
   <td width=80 valign=top>
-  <p class=MsoNormal><b>Technical Sessions (Morning)</b><br>
-<br>Chair: TBA
-<br>11:15am - 1:00pm
+  <p class=MsoNormal><b>Technical Session 1</b><br>
+<br>Chair: Jerry Chou
+<br>11:00am - 12:00pm
   </p>
   </td>
   <td valign=top>
 <p class=MsoNormal>
-Parallel and Distributed Frugal Tracking of a Quantile
+ROSCA: Robust and Scalable Security Alert Correlation and Prioritisation using the MITRE ATT&CK Framework
 <br>
-	&nbsp;&nbsp;&nbsp;&nbsp;M. Cafaro, I. Epicoco, M. Pulimeno
+	&nbsp;&nbsp;&nbsp;&nbsp;Rémi Garcia (Université de Lorraine, CNRS, Inria, LORIA), Abdelkader Lahmadi (Université de Lorraine, CNRS, Inria, LORIA), Pierre-François Gimenez (Univ. Rennes, Inria, IRISA), Charles Sala (Hospices Civils de Lyon)
   </p>
   <br>
  
   <p class=MsoNormal>
-eGossip: Optimizing Resource Utilization in Gossip-Based Clusters through eBPF
+CUPcap: Non-intrusive GPU Activity Capture for Security Auditing on CUDA Platforms
 <br>
-	&nbsp;&nbsp;&nbsp;&nbsp;K. Tsai, J. Chou
+	&nbsp;&nbsp;&nbsp;&nbsp;Pin-Yi Kuo (National Tsing Hua University), Jerry Chou (National Tsing Hua University)
   </p>
   <br>
 	  
@@ -167,7 +163,7 @@ eGossip: Optimizing Resource Utilization in Gossip-Based Clusters through eBPF
 <tr>
   <td width=133  valign=top>
   <p class=MsoNormal><b>Lunch</b><br>
-<br>1:00pm - 2:00pm
+<br>12:00pm - 1:30pm
   </p>
   </td>
   <td valign=top>
@@ -176,37 +172,44 @@ eGossip: Optimizing Resource Utilization in Gossip-Based Clusters through eBPF
 
 <tr>
   <td width=80 valign=top>
-  <p class=MsoNormal><b>Technical Sessions (Afternoon)</b><br>
-<br>Chair: TBA
-<br>2:30pm - 4:00pm
+  <p class=MsoNormal><b>Technical Session 2</b><br>
+<br>Chair: Jerry Chou
+<br>1:30pm - 3:00pm
   </p>
   </td>
   <td valign=top>
 <p class=MsoNormal>
-Defining the Boundaries for Endpoint Congestion Management in Networks for
-High-Performance Computing
+DPU-based Optimization of GPU Data Paths through Real-time Diagnostics and On-Demand Control
 <br>
-	&nbsp;&nbsp;&nbsp;&nbsp;D. Postigo, D. Herreros, E. Barón, C. Camarero, P. Fuentes
+	&nbsp;&nbsp;&nbsp;&nbsp;Yong Xuan Huang (National Tsing Hua University Taiwan), Ming-Hung Chen (IBM Research USA), I-Hsin Chung (IBM Research USA), Jerry Chou (National Tsing Hua University Taiwan)
   </p>
   <br>
  
   <p class=MsoNormal>
-Accelerating Application Bulk Synchronous Writes in HPC Environments
-<br>
-	&nbsp;&nbsp;&nbsp;&nbsp;A. Khan, C. Zimmer, S. Atchley, R. Miller, S. Oral, F. Wang
+Asynchronous Information Flow Tracking with Neural Network-based Acceleration<br>
+	&nbsp;&nbsp;&nbsp;&nbsp;Hong-Wei Li (Research Center for Information Technology Innovation, Academia Sinica), Yun-Guan Chen (National Yang Ming Chiao Tung University), Hsu-Chieh Hsiao (National Yang Ming Chiao Tung University), Yu-Sung Wu (National Yang Ming Chiao Tung University), Yennun Huang (Research Center for Information Technology Innovation, Academia Sinica), You-Wei Juang (National Yang Ming Chiao Tung University), Chia-Chen Yeh (National Yang Ming Chiao Tung University)
   </p>
   <br>
 
   <p class=MsoNormal>
-Flying Base Station Channel Capacity
+A Lightweight Defense for Backdoor Attacks via Data Self-Purification
 <br>
-	&nbsp;&nbsp;&nbsp;&nbsp;S. Chang, K. Park, J. Kim, J. Kim
+	&nbsp;&nbsp;&nbsp;&nbsp;Yukai Xu (Kyushu University, Japan), Yujie Gu (Kyushu University, Japan), Kouichi Sakurai (Kyushu University, Japan)
   </p>
   <br>
 	  
   </td>
  </tr>
-	
+
+<tr>
+  <td width=133  valign=top>
+  <p class=MsoNormal><b>Closing</b><br>
+<br>3:00pm - 3:10pm
+  </p>
+  </td>
+  <td valign=top>
+  </td>
+ </tr>
 </table>
 
 <br><br><br>
