--- a/index.html
+++ b/index.html
@@ -119,7 +119,14 @@ This channel will remain open, and you can join the SNTA slack channel through t
 	  We will discuss how AI can be used to automate vulnerability discovery, enable robust website 
 	  fingerprinting, and process large quantities of audit logs and threat reports.
 	<br><br>
-Bio: 
+Bio: Dr. Hsu-Chun Hsiao is an Associate Professor in Computer Science and Information 
+	Engineering and the Graduate Institute of Networking and Multimedia at National 
+	Taiwan University. She completed her B.S. and M.S. at National Taiwan University 
+	in 2006 and 2008, respectively, and her Ph.D. at Carnegie Mellon University in 2014. 
+	Her research focuses on building practical security solutions with theoretical underpinnings. 
+	She is a recipient of several awards, including Young Scholar Fellowship and 
+	Ta-You Wu Memorial Award from Taiwan Ministry of Science and Technology, IEEE S&P 
+	Test-of-Time Award, and PETS Best Artifact Award.
 	&nbsp;&nbsp;&nbsp;&nbsp;
   </p>
   </td>
