--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ style='font-size:14.0pt;color:black'>ACM First International Workshop on
 Analytics, Telemetry, and Cybersecurity for HPCC (WATCH 2025)</span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'>
-<a href="https://https://watch-miniconf.github.io/index-CFP.html">CFP: https://https://watch-miniconf.github.io/index-CFP.html</a><br>
+<a href="https://watch-miniconf.github.io/index-CFP.html">CFP: https://https://watch-miniconf.github.io/index-CFP.html</a><br>
 <!-- <a href="https://sntaworkshop.github.io/snta/SNTA-archive.html">SNTA archive</a><br> -->
 Email: WATCH.miniconf@gmail.com &nbsp;<br>
 
