added picture of keynote

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@ This channel will remain open, and you can join the SNTA slack channel through t
   <td valign=top>
   <p class=MsoNormal>Keynote Presentation<br>
 &nbsp;&nbsp;&nbsp;&nbsp;Dr. Hsu-Chun Hsiao, National Tsing Hua University <br>
+	  <img src="speaker.jpeg" alt="Dr. Hsu-Chun Hsiao" width="200" height="200">
+
 &nbsp;&nbsp;&nbsp;&nbsp;Title: Fortifying the Digital Backbone for a Resilient Future<br>
 	<br>
 	&nbsp;&nbsp;&nbsp;&nbsp;Abstract: Cyber resilience is crucial in a world facing significant 
